--- a/src/components/FormEditor.scss
+++ b/src/components/FormEditor.scss
@@ -1,4 +1,29 @@
+@import '../colors';
+
 .form-editor {
   display: flex;
+  flex-direction: column;
   flex: 1;
+  padding: 20px;
+  min-width: 400px;
+  align-items: center;
+  overflow-y: scroll;
+  height: 100%;
+  z-index: 3;
+  border-right: 1px solid $adamantium;
+
+  &__item {
+    margin-bottom: 20px;
+    width: 100%;
+  }
+
+  input {
+    width: 100%;
+    height: 30px;
+    margin: 12px 0;
+  }
+
+  button {
+    width: 50%;
+  }
 }
