--- a/src/components/MainContent.scss
+++ b/src/components/MainContent.scss
@@ -1,3 +1,5 @@
+@import '../colors';
+
 .main {
   display: flex;
   flex-direction: column;
@@ -10,5 +12,7 @@
   &__wrapper {
     display: flex;
     flex-direction: row;
+    flex: 1;
+    border-top: 1px solid $adamantium;
   }
 }
