--- a/src/components/Preview.scss
+++ b/src/components/Preview.scss
@@ -1,4 +1,24 @@
 .preview {
   display: flex;
+  flex-direction: column;
   flex: 1;
+  padding: 20px;
+  overflow-y: scroll;
+  height: 100%;
+  z-index: 2;
+
+  &__item {
+    margin-bottom: 20px;
+    width: 100%;
+  }
+
+  &__help-text {
+    font-size: 12px;
+  }
+
+  input {
+    width: 100%;
+    height: 30px;
+    margin: 12px 0;
+  }
 }
